PN-1150: add pn-delivery-push client generated